welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: not found: value esSurBiscuit
	if (esSurBiscuit == true) {
            ^